--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
+--extra-index-url https://download.pytorch.org/whl/cu121
+
 flask
 flask-cors
-torch
-unsloth
 dotenv
-transformers
+torch==2.5.1+cu121
+unsloth==2025.4.1
+transformers==4.51.3
